# babka

./: README.md  _config.yml  testfile.md
6_laba_1/: README.md
6_laba_1/animeproj/: anime.py
6_laba_1/pipenv/: Pipfile  pythonfile.py
6_laba_1/poetry/: proj.py  pyproject.toml
6_laba_2/: README.md  pyproject.toml
6_laba_2/conversation_agent/: agent.py
6_laba_2/conversation_agent/.adk/: session.db
6_laba_2/creative_writer/: agent.py
6_laba_2/creative_writer/.adk/: session.db
6_laba_2/logging_agent/: agent.py
6_laba_2/logging_agent/.adk/: session.db
6_laba_2/math_agent/: agent.py
6_laba_2/math_agent/.adk/: session.db
6_laba_2/my_first_agent/: agent.py
6_laba_2/my_first_agent/.adk/: session.db
6_laba_2/student_helper/: agent.py
6_laba_2/student_helper/.adk/: session.db
6_laba_2/tools/: common_tools.py
assets/css/: style.scss
exam/: exam.py
init/: README.md
lab_1/: 1_code.ipynb  README.md  ai_code.py  code.py
lab_2/: code.py  code_ai.ipynb
lab_3/: README.md  clas_shi.ipynb
lab_4/: classes.ipynb
lab_5/: README.md  assignment.ipynb
