[project]
name = "oop"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleg228",email = "danylobucharov@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "click (>=8.3.3,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
